[project]
name = "study-llm"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langchain-unstructured>=1.0.1",
    "markdown>=3.10.2",
    "openai>=2.38.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.13",
    "unstructured>=0.22.31",
]
