[project]
name = "study-llm"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "flagembedding>=1.4.0",
    "grandalf>=0.8",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.2.1",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "markdown>=3.10.2",
    "mcp>=1.27.1",
    "openai>=2.38.0",
    "pymilvus>=3.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.13",
    "unstructured>=0.22.31",
]
